unpackaged/main/default/objects/contact_TP_44989_web_data__c/fields/CT_TP_Web_Data_44989__c.field-meta.xml
<CustomField>
    <fullName>CT_TP_Web_Data_44989__c</fullName>
    <label>Contact Webcast Data 44989</label>
    <referenceTo>Contact_TP_Web_Data__c</referenceTo>
    <relationshipLabel>Contact TP Webcast Data 44989</relationshipLabel>
    <relationshipName>CT_TP_Web_Data_44989</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>