unpackaged/main/default/objects/contact_TP_44989_web_data__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>