unpackaged/main/default/objects/contact_TP_44989_web_data__c/fields/SurveyITandR_Inmakingtheb__c.field-meta.xml
<CustomField>
    <fullName>SurveyITandR_Inmakingtheb__c</fullName>
    <label>Survey: IT and Reg:In making the busi</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>