unpackaged/main/default/objects/contact_TP_44989_web_data__c/fields/SurveyITandR_Thefoursteps__c.field-meta.xml
<CustomField>
    <fullName>SurveyITandR_Thefoursteps__c</fullName>
    <label>Survey: IT and Reg:The four steps of</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>