unpackaged/main/default/objects/contact_TP_44989_web_data__c/fields/SurveyITandR_TrueofFalseA__c.field-meta.xml
<CustomField>
    <fullName>SurveyITandR_TrueofFalseA__c</fullName>
    <label>Survey: IT and Reg:True of False: Acc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>