unpackaged/main/default/objects/contact_TP_44989_web_data__c/fields/SurveyPoll2s_Howlongdoesy__c.field-meta.xml
<CustomField>
    <fullName>SurveyPoll2s_Howlongdoesy__c</fullName>
    <label>Survey: Poll #2 (s:How long does your</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>