unpackaged/main/default/objects/contact_TP_44989_web_data__c/fields/SurveyUsingS_Lessonslearn__c.field-meta.xml
<CustomField>
    <fullName>SurveyUsingS_Lessonslearn__c</fullName>
    <label>Survey: Using Shar:Lessons learned in</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>