unpackaged/main/default/objects/contact_TP_44989_web_data__c/fields/SurveyUsingS_Thesixpartso__c.field-meta.xml
<CustomField>
    <fullName>SurveyUsingS_Thesixpartso__c</fullName>
    <label>Survey: Using Shar:The six parts of d</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>